# kokkos-stf

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  axpy.cpp  jacobi_pfor.cpp
examples/lin_alg/: cholesky.cu  pdgemm.cu
scripts/: apply-clang-format
